Upload hired a tutor success

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,10 @@
         <item>5</item>
     </string-array>
 
+    <string-array name="locationlist">
+        <item>In my location</item>
+        <item>At tutor place</item>
+    </string-array>
+
 
 </resources>
